# rustvision

./: Cargo.toml  README.md
assets/: mona_lisa_small.ppm  mona_lisa_small_2.ppm  simple.ppm  simple2.ppm  simple3.ppm  test.ppm
examples/: parse.rs  simple.rs
src/: color.rs  files.rs  image.rs  lib.rs  ppm.rs  vec.rs
src/geometry/: mat.rs
src/geometry/mat/: basic.rs  mod.rs
src/geometry/vec/: mod.rs  vec2d.rs  vec2i.rs
src/image/: image.rs  mod.rs  representation.rs
src/shapes/: line.rs  mod.rs  polygon.rs  rect.rs
src/vec/: mod.rs  vec2d.rs  vec2i.rs
